--- a/infrastructure-template.yaml
+++ b/infrastructure-template.yaml
@@ -241,6 +241,96 @@ Resources:
       RouteTableId: !Ref PrivateRouteTable2
       SubnetId: !Ref PrivateSubnet2
 
+
+  ALBSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupName: !Sub '${ProjectName}-${Environment}-alb-sg'
+      GroupDescription: 'Security group for Application Load Balancer'
+      VpcId: 
+        Fn::ImportValue: !Sub '${ProjectName}-${Environment}-VPCId'
+      SecurityGroupIngress:
+        # Allow HTTP from anywhere (internet)
+        - IpProtocol: tcp
+          FromPort: 80
+          ToPort: 80
+          CidrIp: 0.0.0.0/0
+          Description: 'HTTP access from internet'
+        # Allow HTTPS from anywhere (internet) - for future SSL setup
+        - IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
+          CidrIp: 0.0.0.0/0
+          Description: 'HTTPS access from internet'
+      SecurityGroupEgress:
+        # Allow all outbound traffic
+        - IpProtocol: -1
+          CidrIp: 0.0.0.0/0
+          Description: 'All outbound traffic'
+      Tags:
+        - Key: Name
+          Value: !Sub '${ProjectName}-${Environment}-alb-sg'
+        - Key: Environment
+          Value: !Ref Environment
+        - Key: Purpose
+          Value: 'LoadBalancer'
+
+  # Security Group for ECS Tasks
+  ECSSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupName: !Sub '${ProjectName}-${Environment}-ecs-sg'
+      GroupDescription: 'Security group for ECS tasks'
+      VpcId: 
+        Fn::ImportValue: !Sub '${ProjectName}-${Environment}-VPCId'
+      SecurityGroupIngress:
+        # Allow traffic from ALB only on port 8080 (Java app port)
+        - IpProtocol: tcp
+          FromPort: 8080
+          ToPort: 8080
+          SourceSecurityGroupId: !Ref ALBSecurityGroup
+          Description: 'HTTP access from ALB'
+      SecurityGroupEgress:
+        # Allow all outbound traffic (needed for ECR pulls, internet access via NAT)
+        - IpProtocol: -1
+          CidrIp: 0.0.0.0/0
+          Description: 'All outbound traffic'
+      Tags:
+        - Key: Name
+          Value: !Sub '${ProjectName}-${Environment}-ecs-sg'
+        - Key: Environment
+          Value: !Ref Environment
+        - Key: Purpose
+          Value: 'ECS'
+
+  # Security Group for VPC Endpoints (optional but good practice)
+  VPCEndpointSecurityGroup:
+    Type: AWS::EC2::SecurityGroup
+    Properties:
+      GroupName: !Sub '${ProjectName}-${Environment}-vpc-endpoint-sg'
+      GroupDescription: 'Security group for VPC endpoints'
+      VpcId: 
+        Fn::ImportValue: !Sub '${ProjectName}-${Environment}-VPCId'
+      SecurityGroupIngress:
+        # Allow HTTPS from ECS tasks for AWS service access
+        - IpProtocol: tcp
+          FromPort: 443
+          ToPort: 443
+          SourceSecurityGroupId: !Ref ECSSecurityGroup
+          Description: 'HTTPS access from ECS tasks'
+      SecurityGroupEgress:
+        # Allow all outbound traffic
+        - IpProtocol: -1
+          CidrIp: 0.0.0.0/0
+          Description: 'All outbound traffic'
+      Tags:
+        - Key: Name
+          Value: !Sub '${ProjectName}-${Environment}-vpc-endpoint-sg'
+        - Key: Environment
+          Value: !Ref Environment
+        - Key: Purpose
+          Value: 'VPCEndpoints'
+
 # Outputs - these will be used by other CloudFormation stacks
 Outputs:
   VPCId:
@@ -290,3 +380,22 @@ Outputs:
     Value: !Join [',', [!Ref PrivateSubnet1, !Ref PrivateSubnet2]]
     Export:
       Name: !Sub '${ProjectName}-${Environment}-PrivateSubnets'
+
+  
+  ALBSecurityGroupId:
+    Description: 'Security Group ID for Application Load Balancer'
+    Value: !Ref ALBSecurityGroup
+    Export:
+      Name: !Sub '${ProjectName}-${Environment}-ALBSecurityGroup'
+
+  ECSSecurityGroupId:
+    Description: 'Security Group ID for ECS Tasks'
+    Value: !Ref ECSSecurityGroup
+    Export:
+      Name: !Sub '${ProjectName}-${Environment}-ECSSecurityGroup'
+
+  VPCEndpointSecurityGroupId:
+    Description: 'Security Group ID for VPC Endpoints'
+    Value: !Ref VPCEndpointSecurityGroup
+    Export:
+      Name: !Sub '${ProjectName}-${Environment}-VPCEndpointSecurityGroup'
