--- a/infrastructure-template.yaml
+++ b/infrastructure-template.yaml
@@ -331,6 +331,152 @@ Resources:
         - Key: Purpose
           Value: 'VPCEndpoints'
 
+  ApplicationLoadBalancer:
+    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
+    Properties:
+      Name: !Sub '${ProjectName}-${Environment}-alb'
+      Type: application
+      Scheme: internet-facing
+      IpAddressType: ipv4
+      Subnets:
+        - Fn::ImportValue: !Sub '${ProjectName}-${Environment}-PublicSubnet1'
+        - Fn::ImportValue: !Sub '${ProjectName}-${Environment}-PublicSubnet2'
+      SecurityGroups:
+        - Fn::ImportValue: !Sub '${ProjectName}-${Environment}-ALBSecurityGroup'
+      LoadBalancerAttributes:
+        # Enable access logs (optional but recommended)
+        - Key: access_logs.s3.enabled
+          Value: 'false'
+        # Connection idle timeout
+        - Key: idle_timeout.timeout_seconds
+          Value: '60'
+        # Enable deletion protection in production
+        - Key: deletion_protection.enabled
+          Value: 'false'  # Set to true for production
+      Tags:
+        - Key: Name
+          Value: !Sub '${ProjectName}-${Environment}-alb'
+        - Key: Environment
+          Value: !Ref Environment
+        - Key: Purpose
+          Value: 'LoadBalancer'
+
+  # Target Group for ECS Service
+  ECSTargetGroup:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    Properties:
+      Name: !Sub '${ProjectName}-${Environment}-ecs-tg'
+      Port: 8080  # Port where your Java app runs
+      Protocol: HTTP
+      TargetType: ip  # For Fargate, we use IP targets
+      VpcId: 
+        Fn::ImportValue: !Sub '${ProjectName}-${Environment}-VPCId'
+      # Health check configuration
+      HealthCheckEnabled: true
+      HealthCheckIntervalSeconds: 30
+      HealthCheckPath: /  # Your app's health check endpoint
+      HealthCheckProtocol: HTTP
+      HealthCheckTimeoutSeconds: 5
+      HealthyThresholdCount: 2
+      UnhealthyThresholdCount: 3
+      HealthCheckPort: 8080
+      # Target group attributes
+      TargetGroupAttributes:
+        - Key: deregistration_delay.timeout_seconds
+          Value: '30'  # Faster draining for development
+        - Key: stickiness.enabled
+          Value: 'false'
+      Tags:
+        - Key: Name
+          Value: !Sub '${ProjectName}-${Environment}-ecs-tg'
+        - Key: Environment
+          Value: !Ref Environment
+
+  # Blue Target Group for Blue/Green Deployments
+  ECSTargetGroupBlue:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    Properties:
+      Name: !Sub '${ProjectName}-${Environment}-ecs-tg-blue'
+      Port: 8080
+      Protocol: HTTP
+      TargetType: ip
+      VpcId: 
+        Fn::ImportValue: !Sub '${ProjectName}-${Environment}-VPCId'
+      HealthCheckEnabled: true
+      HealthCheckIntervalSeconds: 30
+      HealthCheckPath: /
+      HealthCheckProtocol: HTTP
+      HealthCheckTimeoutSeconds: 5
+      HealthyThresholdCount: 2
+      UnhealthyThresholdCount: 3
+      HealthCheckPort: 8080
+      TargetGroupAttributes:
+        - Key: deregistration_delay.timeout_seconds
+          Value: '30'
+        - Key: stickiness.enabled
+          Value: 'false'
+      Tags:
+        - Key: Name
+          Value: !Sub '${ProjectName}-${Environment}-ecs-tg-blue'
+        - Key: Environment
+          Value: !Ref Environment
+        - Key: Purpose
+          Value: 'BlueGreen'
+
+  # Green Target Group for Blue/Green Deployments
+  ECSTargetGroupGreen:
+    Type: AWS::ElasticLoadBalancingV2::TargetGroup
+    Properties:
+      Name: !Sub '${ProjectName}-${Environment}-ecs-tg-green'
+      Port: 8080
+      Protocol: HTTP
+      TargetType: ip
+      VpcId: 
+        Fn::ImportValue: !Sub '${ProjectName}-${Environment}-VPCId'
+      HealthCheckEnabled: true
+      HealthCheckIntervalSeconds: 30
+      HealthCheckPath: /
+      HealthCheckProtocol: HTTP
+      HealthCheckTimeoutSeconds: 5
+      HealthyThresholdCount: 2
+      UnhealthyThresholdCount: 3
+      HealthCheckPort: 8080
+      TargetGroupAttributes:
+        - Key: deregistration_delay.timeout_seconds
+          Value: '30'
+        - Key: stickiness.enabled
+          Value: 'false'
+      Tags:
+        - Key: Name
+          Value: !Sub '${ProjectName}-${Environment}-ecs-tg-green'
+        - Key: Environment
+          Value: !Ref Environment
+        - Key: Purpose
+          Value: 'BlueGreen'
+
+  # HTTP Listener (redirects to HTTPS in production)
+  HTTPListener:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Properties:
+      LoadBalancerArn: !Ref ApplicationLoadBalancer
+      Port: 80
+      Protocol: HTTP
+      DefaultActions:
+        - Type: forward
+          TargetGroupArn: !Ref ECSTargetGroup
+
+  # Test Listener for Blue/Green deployments (port 8080)
+  TestListener:
+    Type: AWS::ElasticLoadBalancingV2::Listener
+    Properties:
+      LoadBalancerArn: !Ref ApplicationLoadBalancer
+      Port: 8080
+      Protocol: HTTP
+      DefaultActions:
+        - Type: forward
+          TargetGroupArn: !Ref ECSTargetGroupGreen
+
+
 # Outputs - these will be used by other CloudFormation stacks
 Outputs:
   VPCId:
@@ -399,3 +545,58 @@ Outputs:
     Value: !Ref VPCEndpointSecurityGroup
     Export:
       Name: !Sub '${ProjectName}-${Environment}-VPCEndpointSecurityGroup'
+
+
+  ApplicationLoadBalancerDNS:
+    Description: 'DNS name of the Application Load Balancer'
+    Value: !GetAtt ApplicationLoadBalancer.DNSName
+    Export:
+      Name: !Sub '${ProjectName}-${Environment}-ALB-DNS'
+
+  ApplicationLoadBalancerArn:
+    Description: 'ARN of the Application Load Balancer'
+    Value: !Ref ApplicationLoadBalancer
+    Export:
+      Name: !Sub '${ProjectName}-${Environment}-ALB-ARN'
+
+  ApplicationLoadBalancerFullName:
+    Description: 'Full name of the Application Load Balancer'
+    Value: !GetAtt ApplicationLoadBalancer.LoadBalancerFullName
+    Export:
+      Name: !Sub '${ProjectName}-${Environment}-ALB-FullName'
+
+  ECSTargetGroupArn:
+    Description: 'ARN of the main ECS Target Group'
+    Value: !Ref ECSTargetGroup
+    Export:
+      Name: !Sub '${ProjectName}-${Environment}-ECS-TargetGroup'
+
+  ECSTargetGroupBlueArn:
+    Description: 'ARN of the Blue ECS Target Group'
+    Value: !Ref ECSTargetGroupBlue
+    Export:
+      Name: !Sub '${ProjectName}-${Environment}-ECS-TargetGroup-Blue'
+
+  ECSTargetGroupGreenArn:
+    Description: 'ARN of the Green ECS Target Group'
+    Value: !Ref ECSTargetGroupGreen
+    Export:
+      Name: !Sub '${ProjectName}-${Environment}-ECS-TargetGroup-Green'
+
+  HTTPListenerArn:
+    Description: 'ARN of the HTTP Listener'
+    Value: !Ref HTTPListener
+    Export:
+      Name: !Sub '${ProjectName}-${Environment}-HTTP-Listener'
+
+  TestListenerArn:
+    Description: 'ARN of the Test Listener for Blue/Green'
+    Value: !Ref TestListener
+    Export:
+      Name: !Sub '${ProjectName}-${Environment}-Test-Listener'
+
+  ApplicationURL:
+    Description: 'URL to access the application'
+    Value: !Sub 'http://${ApplicationLoadBalancer.DNSName}'
+    Export:
+      Name: !Sub '${ProjectName}-${Environment}-Application-URL'
