--- a/infrastructure-template.yaml
+++ b/infrastructure-template.yaml
@@ -504,18 +504,6 @@ Resources:
               },
               {
                 "rulePriority": 2,
-                "description": "Keep last 5 images for any tag pattern",
-                "selection": {
-                  "tagStatus": "any",
-                  "countType": "imageCountMoreThan",
-                  "countNumber": 5
-                },
-                "action": {
-                  "type": "expire"
-                }
-              },
-              {
-                "rulePriority": 3,
                 "description": "Delete untagged images older than 1 day",
                 "selection": {
                   "tagStatus": "untagged",
@@ -526,9 +514,22 @@ Resources:
                 "action": {
                   "type": "expire"
                 }
+              },
+              {
+                "rulePriority": 3,
+                "description": "Keep last 5 images for any tag pattern (highest priority number)",
+                "selection": {
+                  "tagStatus": "any",
+                  "countType": "imageCountMoreThan",
+                  "countNumber": 5
+                },
+                "action": {
+                  "type": "expire"
+                }
               }
             ]
           }
+
       Tags:
         - Key: Name
           Value: !Sub '${ProjectName}-${Environment}-ecr'
