--- a/infrastructure-template.yaml
+++ b/infrastructure-template.yaml
@@ -742,7 +742,36 @@ Resources:
               Service: codedeploy.amazonaws.com
             Action: sts:AssumeRole
       ManagedPolicyArns:
-        - arn:aws:iam::aws:policy/service-role/AWSCodeDeployRoleForECS
+        - arn:aws:iam::aws:policy/service-role/AWSCodeDeployRoleForECSLimitedAccess
+      Policies:
+        - PolicyName: CodeDeployECSPolicy
+          PolicyDocument:
+            Version: '2012-10-17'
+            Statement:
+              - Effect: Allow
+                Action:
+                  - ecs:CreateTaskSet
+                  - ecs:DeleteTaskSet
+                  - ecs:DescribeServices
+                  - ecs:UpdateServicePrimaryTaskSet
+                  - elasticloadbalancing:DescribeListeners
+                  - elasticloadbalancing:DescribeRules
+                  - elasticloadbalancing:DescribeTargetGroups
+                  - elasticloadbalancing:ModifyListener
+                  - elasticloadbalancing:ModifyRule
+                  - lambda:InvokeFunction
+                  - cloudwatch:DescribeAlarms
+                  - sns:Publish
+                  - s3:GetObject
+                Resource: '*'
+              - Effect: Allow
+                Action:
+                  - iam:PassRole
+                Resource: '*'
+                Condition:
+                  StringLike:
+                    'iam:PassedToService': 
+                      - ecs-tasks.amazonaws.com
       Tags:
         - Key: Name
           Value: !Sub '${ProjectName}-${Environment}-codedeploy-service-role'
@@ -821,11 +850,6 @@ Resources:
       ThumbprintList:
         - 6938fd4d98bab03faadb97b34396831e3780aea1
         - 1c58a3a8518e8759bf075b76b750d4f2df264fcd
-      Tags:
-        - Key: Name
-          Value: !Sub '${ProjectName}-${Environment}-github-oidc-provider'
-        - Key: Environment
-          Value: !Ref Environment
 
   # GitHub Actions Role (for OIDC authentication)
   GitHubActionsRole:
