--- a/infrastructure-template.yaml
+++ b/infrastructure-template.yaml
@@ -248,13 +248,13 @@ Resources:
       SubnetId: !Ref PrivateSubnet2
 
 
+  # Security Group for Application Load Balancer
   ALBSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupName: !Sub '${ProjectName}-${Environment}-alb-sg'
       GroupDescription: 'Security group for Application Load Balancer'
-      VpcId: 
-        Fn::ImportValue: !Sub '${ProjectName}-${Environment}-VPCId'
+      VpcId: !Ref VPC
       SecurityGroupIngress:
         # Allow HTTP from anywhere (internet)
         - IpProtocol: tcp
@@ -287,8 +287,7 @@ Resources:
     Properties:
       GroupName: !Sub '${ProjectName}-${Environment}-ecs-sg'
       GroupDescription: 'Security group for ECS tasks'
-      VpcId: 
-        Fn::ImportValue: !Sub '${ProjectName}-${Environment}-VPCId'
+      VpcId: !Ref VPC
       SecurityGroupIngress:
         # Allow traffic from ALB only on port 8080 (Java app port)
         - IpProtocol: tcp
@@ -309,67 +308,13 @@ Resources:
         - Key: Purpose
           Value: 'ECS'
 
-    # ALBSecurityGroup:
-    #   Type: AWS::EC2::SecurityGroup
-    #   Properties:
-    #     GroupName: !Sub '${ProjectName}-${Environment}-alb-sg'
-    #     GroupDescription: 'Security group for Application Load Balancer'
-    #     VpcId: !Ref VPC # Change from Fn::ImportValue to !Ref
-    #     SecurityGroupIngress:
-    #       # Allow HTTP from anywhere (internet)
-    #       - IpProtocol: tcp
-    #         FromPort: 80
-    #         ToPort: 80
-    #         CidrIp: 0.0.0.0/0
-    #         Description: 'HTTP access from internet'
-    #       # Allow HTTPS from anywhere (internet) - for future SSL setup
-    #       - IpProtocol: tcp
-    #         FromPort: 443
-    #         ToPort: 443
-    #         CidrIp: 0.0.0.0/0
-    #         Description: 'HTTPS access from internet'
-    #     SecurityGroupEgress:
-    #       # Allow all outbound traffic
-    #       - IpProtocol: -1
-    #         CidrIp: 0.0.0.0/0
-    #         Description: 'All outbound traffic'
-    #     Tags:
-    #       - Key: Name
-    #         Value: !Sub '${ProjectName}-${Environment}-alb-sg'
-    #       - Key: Environment
-    #         Value: !Ref Environment
-    #       - Key: Purpose
-    #         Value: 'LoadBalancer'
-
-    # # Security Group for ECS Tasks
-    # ECSSecurityGroup:
-    #   Type: AWS::EC2::SecurityGroup
-    #   Properties:
-    #     GroupName: !Sub '${ProjectName}-${Environment}-ecs-sg'
-    #     GroupDescription: 'Security group for ECS tasks'
-    #     VpcId: !Ref VPC # Change from Fn::ImportValue to !Ref
-    #     SecurityGroupIngress:
-    #       # Allow traffic from ALB only on port 8080 (Java app port)
-    #       - IpProtocol: tcp
-    #         FromPort: 8080
-    #         ToPort: 8080
-    #         SourceSecurityGroupId: !Ref ALBSecurityGroup
-    #         Description: 'HTTP access from ALB'
-    #     SecurityGroupEgress:
-    #       # Allow all outbound traffic (needed for ECR pulls, internet access via NAT)
-    #       - IpProtocol: -1
-    #         CidrIp: 0.0.0.0/0
-    #         Description: 'All outbound traffic'
-
-
   # Security Group for VPC Endpoints (optional but good practice)
   VPCEndpointSecurityGroup:
     Type: AWS::EC2::SecurityGroup
     Properties:
       GroupName: !Sub '${ProjectName}-${Environment}-vpc-endpoint-sg'
       GroupDescription: 'Security group for VPC endpoints'
-      VpcId: 
-        Fn::ImportValue: !Sub '${ProjectName}-${Environment}-VPCId'
+      VpcId: !Ref VPC
       SecurityGroupIngress:
         # Allow HTTPS from ECS tasks for AWS service access
         - IpProtocol: tcp
@@ -398,10 +343,10 @@ Resources:
       Scheme: internet-facing
       IpAddressType: ipv4
       Subnets:
-        - Fn::ImportValue: !Sub '${ProjectName}-${Environment}-PublicSubnet1'
-        - Fn::ImportValue: !Sub '${ProjectName}-${Environment}-PublicSubnet2'
+        - !Ref PublicSubnet1
+        - !Ref PublicSubnet2
       SecurityGroups:
-        - Fn::ImportValue: !Sub '${ProjectName}-${Environment}-ALBSecurityGroup'
+        - !Ref ALBSecurityGroup
       LoadBalancerAttributes:
         # Enable access logs (optional but recommended)
         - Key: access_logs.s3.enabled
@@ -428,8 +373,7 @@ Resources:
       Port: 8080  # Port where your Java app runs
       Protocol: HTTP
       TargetType: ip  # For Fargate, we use IP targets
-      VpcId: 
-        Fn::ImportValue: !Sub '${ProjectName}-${Environment}-VPCId'
+      VpcId: !Ref VPC
       # Health check configuration
       HealthCheckEnabled: true
       HealthCheckIntervalSeconds: 30
@@ -459,8 +403,7 @@ Resources:
       Port: 8080
       Protocol: HTTP
       TargetType: ip
-      VpcId: 
-        Fn::ImportValue: !Sub '${ProjectName}-${Environment}-VPCId'
+      VpcId: !Ref VPC
       HealthCheckEnabled: true
       HealthCheckIntervalSeconds: 30
       HealthCheckPath: /
@@ -490,8 +433,7 @@ Resources:
       Port: 8080
       Protocol: HTTP
       TargetType: ip
-      VpcId: 
-        Fn::ImportValue: !Sub '${ProjectName}-${Environment}-VPCId'
+      VpcId: !Ref VPC
       HealthCheckEnabled: true
       HealthCheckIntervalSeconds: 30
       HealthCheckPath: /
@@ -891,9 +833,6 @@ Resources:
         - Key: Environment
           Value: !Ref Environment
 
-
-
-# Outputs - these will be used by other CloudFormation stacks
 Outputs:
   VPCId:
     Description: 'VPC ID'
@@ -942,7 +881,6 @@ Outputs:
     Value: !Join [',', [!Ref PrivateSubnet1, !Ref PrivateSubnet2]]
     Export:
       Name: !Sub '${ProjectName}-${Environment}-PrivateSubnets'
-
   
   ALBSecurityGroupId:
     Description: 'Security Group ID for Application Load Balancer'
@@ -1070,5 +1008,3 @@ Outputs:
     Value: !GetAtt GitHubActionsRole.Arn
     Export:
       Name: !Sub '${ProjectName}-${Environment}-GitHubActionsRole'
-  
-
